[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clipmaster"
version = "0.1.0"
description = "Transcribe audio and video files, then run transcript moderation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
clipmaster = "analyze_audio:main"

[tool.setuptools]
py-modules = ["analyze_audio"]
